# qmssspkg

./: .gitignore  .readthedocs.yml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
docs/: conf.py
src/qmsspkg/: __init__.py  qmsspkg.py
tests/: test_qmsspkg.py
