[tool.poetry]
name = "qmsspkg"
version = "0.1.0"
description = "Python package that eases the pain of concatenating Pandas categoricals!"
authors = ["Thomas Brambor"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
