[tool.poetry]
name = "qmsspkg"
version = "1.0.1"
description = "Python package that eases the pain of concatenating Pandas categoricals!"
authors = ["Thomas Brambor"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
myst-nb = "^1.1.2"
sphinx-autoapi = "^3.3.2"
sphinx-rtd-theme = "^3.0.1"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
